# lumindd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: debug.md  decomposition.md  hooks.md  matrix.md  mtr.md  precision.md  priority.md  wrappers.md
docs/src/api/: index.md  manager.md  nodeid.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/guide/: add.md  approximation.md  bdd.md  export.md  reordering.md  serialization.md  zdd.md
docs/theme/: custom.css
src/: add.rs  add_abstract.rs  add_extra.rs  add_matrix.rs  add_walsh.rs  apa.rs  bdd.rs  bdd_approx.rs  bdd_approx_extra.rs  bdd_clause.rs  bdd_clip.rs  bdd_correl.rs  bdd_decomp.rs  bdd_extra.rs  bdd_misc.rs  bdd_priority.rs  bdd_sign.rs  bdd_transfer.rs  compose_adv.rs  computed_table.rs  count_ext.rs  dddmp.rs  debug.rs  epd.rs  error.rs  export.rs  harwell.rs  hooks.rs  interact.rs  level_queue.rs  lib.rs  local_cache.rs  manager.rs  manager_accessors.rs  mtr.rs  node.rs  reorder.rs  reorder_annealing.rs  reorder_dispatch.rs  reorder_exact.rs  (+13 more)
tests/: add_tests.rs  bdd_tests.rs  comprehensive_tests.rs  edge_case_tests.rs  integration_tests.rs  untested_fns_tests.rs  zdd_tests.rs
